<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
	android:baselineAligned="false">
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:baselineAligned="false">
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:orientation="vertical">

		<TextView
			android:id="@+id/testproject"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="10dp"
			android:text="@string/test_project"
			android:textSize="15sp" />

		<Button
			android:id="@+id/test_color"
			android:layout_width="150dp"
			android:layout_height="40dp"
			android:layout_marginBottom="3dp"
			android:text="@string/but_test_color"
		 />

		<Button
			android:id="@+id/test_sd"
			android:layout_width="150dp"
			android:layout_height="40dp"
			android:layout_marginBottom="3dp"
			android:text="@string/but_test_sd"
			 />

		<Button
			android:id="@+id/test_camera"
			android:layout_width="150dp"
			android:layout_height="40dp"
			android:layout_marginBottom="3dp"
			android:text="@string/but_test_camera"
			/>

		<Button
			android:id="@+id/test_wifi"
			android:layout_width="150dp"
			android:layout_height="40dp"
			android:layout_marginBottom="3dp"
			android:text="@string/but_test_wifi"
			/>

		<Button
			android:id="@+id/test_bluetooth"
			android:layout_width="150dp"
			android:layout_height="40dp"
			android:layout_marginBottom="3dp"
			android:text="@string/but_test_bluetooth"
			/>

		<Button
			android:id="@+id/test_touch"
			android:layout_width="150dp"
			android:layout_height="40dp"
			android:layout_marginBottom="3dp"
			android:text="@string/test_touch"
			 />

		<Button
			android:id="@+id/test_pin"
			android:layout_width="150dp"
			android:layout_height="40dp"
			android:layout_marginBottom="3dp"
			android:text="@string/test_pin"
			/>

		<Button
			android:id="@+id/test_AudioVideo"
			android:layout_width="150dp"
			android:layout_height="40dp"
			android:layout_marginBottom="3dp"
			android:text="@string/test_AudioVideo"
			/>


	</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="vertical">

			<TextView
				android:id="@+id/testproject1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:textSize="25dp" />


			<Button
				android:id="@+id/test_Record"
				android:layout_width="150dp"
				android:layout_height="40dp"
				android:layout_marginBottom="3dp"
				android:text="@string/test_Record" />

			<Button
				android:id="@+id/test_Fingerprint"
				android:layout_width="150dp"
				android:layout_height="40dp"
				android:layout_marginBottom="3dp"
				android:text="@string/test_Fingerprint" />

			<Button
				android:id="@+id/test_Gsensor"
				android:layout_width="150dp"
				android:layout_height="40dp"
				android:layout_marginBottom="3dp"
				android:text="@string/test_Gsensor" />

			<Button
				android:id="@+id/test_FpFlash"
				android:layout_width="150dp"
				android:layout_height="40dp"
				android:layout_marginBottom="3dp"
				android:text="@string/test_FpFlash" />

			<Button
				android:id="@+id/test_Uart"
				android:layout_width="150dp"
				android:layout_height="40dp"
				android:layout_marginBottom="3dp"
				android:text="@string/test_Uart" />

			<TextView
				android:id="@+id/wordcount"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:text="@string/wordcount"
				android:textSize="15dp" />

		</LinearLayout>
	</LinearLayout>
<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:layout_weight="1" 
		android:gravity="center">
		<TextView  
		 android:gravity="left"  
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
         android:text="最后测试时间">
         </TextView> 
         <TextView
         android:gravity="left" 
         android:id="@+id/lasttime"    
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content">            	    
         </TextView>   
        <TableLayout     
            android:id="@+id/TableLayout01"     
            android:layout_width="fill_parent"     
            android:layout_height="wrap_content">
         	<TableRow android:id="@+id/TableRow2"
				android:layout_width="80dp"
				android:layout_height="40dp">

				<TextView
					android:layout_width="80dp"
					android:layout_height="20dp"
					android:text="@string/test_colorresult_name"
					android:textSize="8sp"></TextView>
           		<TextView android:id="@+id/test_colorresult"
					android:layout_width="80dp"
					android:layout_height="20dp"
					android:textSize="8sp">
                </TextView>
           </TableRow>
           <TableRow android:id="@+id/TableRowsd"
			   android:layout_width="80dp"
			   android:layout_height="20dp"
			   android:textSize="8sp">

			   <TextView
				   android:layout_width="80dp"
				   android:layout_height="20dp"
				   android:text="@string/test_sdresult_name"
				   android:textSize="8sp"></TextView>
           		<TextView android:id="@+id/test_sdresult"
					android:layout_width="80dp"
					android:layout_height="20dp"
					android:textSize="8sp">
                </TextView>
           </TableRow>
           <TableRow android:id="@+id/TableRowcamera"
			   android:layout_width="80dp"
			   android:layout_height="20dp"
			   android:textSize="8sp">

			   <TextView
				   android:layout_width="80dp"
				   android:layout_height="20dp"
				   android:text="@string/test_cameraresult_name"
				   android:textSize="8sp"></TextView>
           		<TextView android:id="@+id/test_cameraresult" 
           		    android:layout_width="80dp"
                	android:layout_height="20dp"
					android:textSize="8sp">
                </TextView>
           </TableRow>
           <TableRow android:id="@+id/TableRowwifi"
			   android:layout_width="80dp"
			   android:layout_height="20dp"
			   android:textSize="8sp">

			   <TextView
				   android:layout_width="80dp"
				   android:layout_height="20dp"
				   android:text="@string/test_wifiresult_name"
				   android:textSize="8sp"></TextView>
           		<TextView android:id="@+id/test_wifiresult"
					android:layout_width="80dp"
					android:layout_height="20dp"
					android:textSize="8sp">
                </TextView>
           </TableRow>
           <TableRow android:id="@+id/TableRowbt"
			   android:layout_width="80dp"
			   android:layout_height="20dp">

			   <TextView
				   android:layout_width="80dp"
				   android:layout_height="20dp"
				   android:text="@string/test_btresult_name"
				   android:textSize="8sp"></TextView>
           		<TextView android:id="@+id/test_btresult"
					android:layout_width="80dp"
					android:layout_height="20dp"
					android:textSize="8sp">
                </TextView>
           </TableRow>
           <TableRow android:id="@+id/TableRowtouch"
			   android:layout_width="80dp"
			   android:layout_height="20dp">

			   <TextView
				   android:layout_width="80dp"
				   android:layout_height="20dp"
				   android:text="@string/test_touchresult_name"
				   android:textSize="8sp"></TextView>
           		<TextView android:id="@+id/test_touchresult"
					android:layout_width="80dp"
					android:layout_height="20dp"
					android:textSize="8sp">
                </TextView>
           </TableRow>
           <TableRow android:id="@+id/TableRowgpio"
			   android:layout_width="80dp"
			   android:layout_height="20dp">

			   <TextView
				   android:layout_width="80dp"
				   android:layout_height="20dp"
				   android:text="@string/test_gpioresult_name"
				   android:textSize="8sp"></TextView>
           		<TextView android:id="@+id/test_gpioresult"
					android:layout_width="80dp"
					android:layout_height="20dp"
					android:textSize="8sp">
                </TextView>
           </TableRow>
           <TableRow android:id="@+id/TableRowav" 
         	    android:layout_width="wrap_content"  
            	android:layout_height="wrap_content">

			   <TextView
				   android:layout_width="80dp"
				   android:layout_height="20dp"
				   android:text="@string/test_avresult_name"
				   android:textSize="8sp"></TextView>
           		<TextView android:id="@+id/test_avresult"
					android:layout_width="80dp"
					android:layout_height="20dp"
					android:textSize="8sp">
                </TextView>
           </TableRow>
           <TableRow android:id="@+id/TableRowrecord"
			   android:layout_width="80dp"
			   android:layout_height="20dp">

			   <TextView
				   android:layout_width="80dp"
				   android:layout_height="20dp"
				   android:text="@string/test_recordresult_name"
				   android:textSize="8sp"></TextView>
           		<TextView android:id="@+id/test_recordresult"
					android:layout_width="80dp"
					android:layout_height="20dp"
					android:textSize="8sp">
                </TextView>
           </TableRow>
           <TableRow android:id="@+id/TableRowfp"
			   android:layout_width="80dp"
			   android:layout_height="20dp">

			   <TextView
				   android:layout_width="80dp"
				   android:layout_height="20dp"
				   android:text="@string/test_fpresult_name"
				   android:textSize="8sp"></TextView>
           		<TextView android:id="@+id/test_fpresult"
					android:layout_width="80dp"
					android:layout_height="20dp"
					android:textSize="8sp">
                </TextView>
           </TableRow>
           <TableRow android:id="@+id/TableRowgsensor"
			   android:layout_width="80dp"
			   android:layout_height="20dp">

			   <TextView
				   android:layout_width="80dp"
				   android:layout_height="20dp"
				   android:text="@string/test_gsensorresult_name"
				   android:textSize="8sp"></TextView>
           		<TextView android:id="@+id/test_gsensorresult"
					android:layout_width="80dp"
					android:layout_height="20dp"
					android:textSize="8sp">
                </TextView>
           </TableRow>
                      <TableRow android:id="@+id/TableRowfpflash" 
         	    android:layout_width="80dp"
            	android:layout_height="20dp">
            	<TextView
					android:layout_width="80dp"
					android:layout_height="20dp"
               		android:text="@string/test_fpflash_name"
					android:textSize="8sp">
            	</TextView>  
           		<TextView android:id="@+id/test_fpflashresult"
					android:layout_width="80dp"
					android:layout_height="20dp"
					android:textSize="8sp">
                </TextView>
           </TableRow>  
           <TableRow android:id="@+id/TableRowuart"
			   android:layout_width="80dp"
			   android:layout_height="20dp"
			   android:textSize="8sp">
            	<TextView
					android:layout_width="80dp"
					android:layout_height="20dp"
               		android:text="@string/test_uart_name"
					android:textSize="8sp">
            	</TextView>  
           		<TextView android:id="@+id/test_uartresult" 
           		    android:layout_width="80dp"
                	android:layout_height="20dp"
					android:textSize="8sp">
                </TextView>
           </TableRow>  

        
    </TableLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:orientation="horizontal">
		<TableRow android:id="@+id/TableImporttxt"
			android:layout_width="80dp"
			android:layout_height="40dp"
			>
			<Button
				android:id="@+id/test_export"
				android:layout_width="80dp"
				android:layout_height="40dp"
				android:layout_marginBottom="5dp"
				android:text="导出结果"
				android:textSize="12sp"/>
		</TableRow>
		<TableRow android:id="@+id/exit"
			android:layout_width="150dp"
			android:layout_height="40dp"
			>
			<Button
				android:id="@+id/test_exit"
				android:layout_width="80dp"
				android:layout_height="40dp"
				android:layout_marginBottom="5dp"
				android:text="退出"
				android:textSize="12sp"/>
		</TableRow>
	</LinearLayout>
	</LinearLayout>
	
</LinearLayout>