<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:orientation="vertical"
	android:gravity="center"	>

	 <LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_weight="1" 
		android:gravity="center" >
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:text="@string/test_camera_mess" />
	</LinearLayout>
	
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:gravity="center">
		
		<Button android:id="@+id/but_return" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_marginLeft="5dp"
			android:text="@string/but_return" />
			
		<Button android:id="@+id/but_changecamera" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/but_camera_open" />
		<Button android:id="@+id/but_record" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/but_camera_record" />

	</LinearLayout>
</LinearLayout>
