<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/serialportbaudrateinput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serialportinput"
        android:inputType="number"
        android:text="115200"
        android:hint="@string/baudrate" >
    </EditText>

    <EditText
        android:id="@+id/serialportinput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="/dev/ttyS0"
        android:hint="@string/serialpatch" >
    </EditText>

    <Button
        android:id="@+id/surebt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serialportbaudrateinput"
        android:text="@string/ok" />

</RelativeLayout>